First fork commit for RoboTale

--- a/python/samples/requirements.txt
+++ b/python/samples/requirements.txt
@@ -2,3 +2,23 @@ python-dotenv
 soundfile
 numpy
 scipy
+azure-ai-translation-text
+azure-cognitiveservices-speech
+azure-core
+langchain-core
+langchain-ollama
+langchain-openai
+langsmith
+ollama
+PyAudio
+pyttsx3
+pyusb
+wavio
+yacman
+sounddevice
+openai
+matplotlib
+numpy
+transformers
+simpleaudio
+torch
